# deposito-addari-EY

./: README.md
19_08/: 02 - ML supervisionata.ipynb
20_08/: 03 - ML unsupervised.ipynb  main.py
25_08/: ragas_results.csv
27_08/mathcrew/: README.md  pyproject.toml
27_08/mathcrew/db/: chroma.sqlite3
27_08/mathcrew/src/mathcrew/: crew.py  main.py
27_08/mathcrew/src/mathcrew/config/: agents.yaml  tasks.yaml
27_08/mathcrew/src/mathcrew/tools/: custom_tool.py
27_08/webcrew/: README.md  pyproject.toml  report.md
27_08/webcrew/db/: chroma.sqlite3
27_08/webcrew/src/webcrew/: crew.py  main.py
28_08/genericflow/: README.md  generic_flow.html  pyproject.toml
28_08/genericflow/docs/source/: conf.py  index.rst
28_08/genericflow/docs/source/api/: genericflow.rst  genericflow.tools.rst  modules.rst
28_08/genericflow/faiss_index_example/: index.faiss
28_08/genericflow/output/: research_report.md
28_08/genericflow/src/genericflow/: flow.py  flow_copy.py  main.py
28_08/genericflow/src/genericflow/crews/mathcrew/config/: agents.yaml
28_08/genericflow/src/genericflow/crews/rag/docs/: minecraft_dirt_overview.md
28_08/genericflow/src/secondflow/: flow_copy.py
28_08/genericflow/src/secondflow/crews/mathcrew/: crew.py
28_08/genericflow/src/secondflow/crews/mathcrew/config/: tasks.yaml
28_08/genericflow/src/secondflow/crews/ocr_crew/: crew.py
28_08/genericflow/src/secondflow/crews/ocr_crew/config/: agents.yaml  tasks.yaml
28_08/genericflow/src/secondflow/crews/rag/: faiss_rag.py
28_08/genericflow/src/secondflow/crews/webrag/: crew.py
28_08/genericflow/src/secondflow/crews/webrag/config/: agents.yaml  tasks.yaml
28_08/genericflow/src/secondflow/tools/: custom_tool.py
(+74 files in other folders)
