[project]
name = "mathcrew"
version = "0.1.0"
description = "mathcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
mathcrew = "mathcrew.main:run"
run_crew = "mathcrew.main:run"
train = "mathcrew.main:train"
replay = "mathcrew.main:replay"
test = "mathcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
