[project]
name = "webcrew"
version = "0.1.0"
description = "webcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
webcrew = "webcrew.main:run"
run_crew = "webcrew.main:run"
train = "webcrew.main:train"
replay = "webcrew.main:replay"
test = "webcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
