[project]
name = "webrag"
version = "0.1.0"
description = "webrag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "faiss-cpu>=1.12.0",
]

[project.scripts]
webrag = "webrag.main:run"
run_crew = "webrag.main:run"
train = "webrag.main:train"
replay = "webrag.main:replay"
test = "webrag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
